feat: added checksfor Docker
